--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dante</title>
+  <title>Pengcheng Ding</title>
 
   <!--
     - favicon
@@ -531,7 +531,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div> -->
 
-                  <img src="./assets/images/project1.png" alt="Candle boy" loading="lazy">
+                  <img src="./assets/images/Project1.png" alt="Candle boy" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Candle boy</h3>
@@ -549,7 +549,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div> -->
 
-                  <img src="./assets/images/project2.png" alt="Exermon" loading="lazy">
+                  <img src="./assets/images/Project2.png" alt="Exermon" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Exermon</h3>
@@ -567,7 +567,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div> -->
 
-                  <img src="./assets/images/project3.png" alt="PPlus" loading="lazy">
+                  <img src="./assets/images/Project3.png" alt="PPlus" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">PPlus</h3>
@@ -585,7 +585,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div> -->
 
-                  <img src="./assets/images/project4.png" alt="Rejuvenation" loading="lazy">
+                  <img src="./assets/images/Project4.png" alt="Rejuvenation" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Rejuvenation</h3>
@@ -603,7 +603,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div> -->
 
-                  <img src="./assets/images/project5.png" alt="UE4 Battle" loading="lazy">
+                  <img src="./assets/images/Project5.png" alt="UE4 Battle" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">UE4 Battle</h3>
@@ -621,7 +621,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div> -->
 
-                  <img src="./assets/images/project6.png" alt="Three Kingdom survivor" loading="lazy">
+                  <img src="./assets/images/Project6.png" alt="Three Kingdom survivor" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Three Kingdom survivor</h3>
@@ -639,7 +639,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div> -->
 
-                  <img src="./assets/images/project7.png" alt="My twitter" loading="lazy">
+                  <img src="./assets/images/Project7.png" alt="My twitter" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">My twitter</h3>
@@ -657,7 +657,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div> -->
 
-                  <img src="./assets/images/project8.png" alt="Miyazaki Hayao Revie" loading="lazy">
+                  <img src="./assets/images/Project8.png" alt="Miyazaki Hayao Revie" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Miyazaki Hayao Review</h3>
@@ -675,7 +675,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div> -->
 
-                  <img src="./assets/images/project9.png" alt="Big Fish & Begonia" loading="lazy">
+                  <img src="./assets/images/Project9.png" alt="Big Fish & Begonia" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Big Fish & Begonia</h3>
