--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Frontend Engineer</h4>
+              <h4 class="h4 timeline-item-title">Software Development Engineer</h4>
 
               <span>Netease</span>
               <span>2022 - 2023</span>
@@ -360,7 +360,7 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Frontend Engineer</h4>
+              <h4 class="h4 timeline-item-title">Software Development Engineer</h4>
 
               <span>Tencent</span>
               <span>2021-2022</span>
@@ -389,7 +389,7 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Frontend Engineer Intern</h4>
+              <h4 class="h4 timeline-item-title">Software Development Engineer Intern</h4>
 
               <span>Tencent</span>
               <span>2020-2021</span>
@@ -430,7 +430,7 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Frontend Dev</h5>
+                <h5 class="h5">Software Development Dev</h5>
                 <data value="70">90%</data>
               </div>
 
