--- a/index.html
+++ b/index.html
@@ -524,12 +524,12 @@
           <ul class="project-list">
 
             <li class="project-item  active" data-filter-item data-category="game development">
-              <a href="#">
+              <a href="https://www.youtube.com/watch?v=ek5vce-xeXQ">
 
                 <figure class="project-img">
-                  <!-- <div class="project-item-icon-box">
+                  <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
-                  </div> -->
+                  </div>
 
                   <img src="./assets/images/Project1.png" alt="Candle boy" loading="lazy">
                 </figure>
@@ -541,6 +541,41 @@
               </a>
             </li>
 
+            <li class="project-item  active" data-filter-item data-category="game development">
+              <a href="https://www.youtube.com/watch?v=YqwuiGUUPdg">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/Project5.png" alt="UE4 Battle" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">UE4 Battle</h3>
+
+                <p class="project-category">Game development</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="game development">
+              <a href="https://www.youtube.com/watch?v=iZBdArelCTg">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/Project6.png" alt="Three Kingdom survivor" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Three Kingdom survivor</h3>
+
+                <p class="project-category">Game development</p>
+
+              </a>
+            </li>
             <li class="project-item  active" data-filter-item data-category="game development">
               <a href="#">
 
@@ -595,49 +630,13 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="game development">
-              <a href="#">
-
-                <figure class="project-img">
-                  <!-- <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div> -->
-
-                  <img src="./assets/images/Project5.png" alt="UE4 Battle" loading="lazy">
-                </figure>
-
-                <h3 class="project-title">UE4 Battle</h3>
-
-                <p class="project-category">Game development</p>
-
-              </a>
-            </li>
-
-            <li class="project-item  active" data-filter-item data-category="game development">
-              <a href="#">
-
-                <figure class="project-img">
-                  <!-- <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div> -->
-
-                  <img src="./assets/images/Project6.png" alt="Three Kingdom survivor" loading="lazy">
-                </figure>
-
-                <h3 class="project-title">Three Kingdom survivor</h3>
-
-                <p class="project-category">Game development</p>
-
-              </a>
-            </li>
-
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+              <a href="https://my-twitter-dante.vercel.app/">
 
                 <figure class="project-img">
-                  <!-- <div class="project-item-icon-box">
+                  <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
-                  </div> -->
+                  </div>
 
                   <img src="./assets/images/Project7.png" alt="My twitter" loading="lazy">
                 </figure>
@@ -649,41 +648,6 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
-
-                <figure class="project-img">
-                  <!-- <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div> -->
-
-                  <img src="./assets/images/Project8.png" alt="Miyazaki Hayao Revie" loading="lazy">
-                </figure>
-
-                <h3 class="project-title">Miyazaki Hayao Review</h3>
-
-                <p class="project-category">Web development</p>
-
-              </a>
-            </li>
-
-            <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
-
-                <figure class="project-img">
-                  <!-- <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div> -->
-
-                  <img src="./assets/images/Project9.png" alt="Big Fish & Begonia" loading="lazy">
-                </figure>
-
-                <h3 class="project-title">Big Fish & Begonia</h3>
-
-                <p class="project-category">Web development</p>
-
-              </a>
-            </li>
           </ul>
 
         </section>
