--- a/index.html
+++ b/index.html
@@ -262,9 +262,6 @@
       </article>
 
 
-
-
-
       <!--
         - #RESUME
       -->
@@ -430,7 +427,7 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Software Development Dev</h5>
+                <h5 class="h5">Software Development</h5>
                 <data value="70">90%</data>
               </div>
 
@@ -443,7 +440,7 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Backend Dev</h5>
+                <h5 class="h5">Fullstack Development</h5>
                 <data value="70">80%</data>
               </div>
 
@@ -482,6 +479,10 @@
             </li>
 
             <li class="filter-item">
+              <button data-filter-btn>Work Experience</button>
+            </li>
+
+            <li class="filter-item">
               <button data-filter-btn>Game development</button>
             </li>
 
@@ -491,6 +492,7 @@
 
           </ul>
 
+          
           <div class="filter-select-box">
 
             <button class="filter-select" data-select>
@@ -510,6 +512,10 @@
               </li>
 
               <li class="select-item">
+                <button data-select-item>Work Experience</button>
+              </li>
+
+              <li class="select-item">
                 <button data-select-item>Game development</button>
               </li>
 
@@ -521,7 +527,62 @@
 
           </div>
 
-          <ul class="project-list">
+          <ul class="project-list">     
+
+            <li class="project-item  active" data-filter-item data-category="work experience">
+              <a href="https://hyrz.qq.com/">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/Naruto.png" alt="Naruto Mobile" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Naruto Mobile</h3>
+
+                <p class="project-category">Work Experience</p>
+
+              </a>
+            </li>
+
+
+            <li class="project-item  active" data-filter-item data-category="work experience">
+              <a href="https://op.qq.com/">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/OnePiece.png" alt="OnePiece Mobile" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">OnePiece Mobile</h3>
+
+                <p class="project-category">Work Experience</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="work experience">
+              <a href="https://netease-ouka.163.com/">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/Sakura.png" alt="Sakura Studio" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Sakura Studio</h3>
+
+                <p class="project-category">Work Experience</p>
+
+              </a>
+            </li>
 
             <li class="project-item  active" data-filter-item data-category="game development">
               <a href="https://www.youtube.com/watch?v=ek5vce-xeXQ">
