--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                 <h4 class="h4 service-item-title">Web development</h4>
 
                 <p class="service-item-text">
-                  High-quality development of sites at the professional level.
+                  High-quality development of sites at the professional level. I have experience in developing web applications in full stack.
                 </p>
               </div>
 
@@ -335,22 +335,20 @@
               <span>2022 - 2023</span>
 
               <p class="timeline-text">
-                1. Devised Unreal Engine 4 using C++ to align with project requirements.
+                1. Developed a C++ server to facilitate frame synchronization in client-to-client combat scenarios, ensuring real-time, seamless
+                interaction between players.
               </p>
               <p class="timeline-text">
-                2. Engineered modifications to the material system for achieving a 3D toon rendering effect.
+                2. Spearheaded game performance optimization to ensure fluid gameplay across platforms including PS4, PS5, PC and Switch, catering to
+                a diverse user base. Implemented Docker for the development and deployment phases, automated deployment, and streamlined the
+                process using Jenkins for CI/CD.
               </p>
               <p class="timeline-text">
-                3. Created Editor Utility Widgets to empower Artists with efficient asset import, verification, and modification
-                capabilities.
+                3. Enhanced Unreal Engine 4 utilizing C++, achieving a 15% enhancement in game performance and setting benchmarks in efficiency.
               </p>
               <p class="timeline-text">
                 4. Collaborated with artists in the rendering, level sequence, and character production process.
                 Troubleshooted and fixed 90% of the problems.
-              </p>
-              <p class="timeline-text">
-                5. Optimized game performance to ensure smooth gameplay experience across diverse platforms, including PS4,
-                PS5, and Switch.
               </p>
 
             </li>
@@ -363,22 +361,17 @@
               <span>2021-2022</span>
 
               <p class="timeline-text">
-                1. Developed the upcoming mobile game “One Piece Ambition” using Unreal Engine 4.
+                1. Developed a data management tool for game designers, utilizing Python Django and shell scripting for backend processing and
+                MongoDB for data management.
               </p>
               <p class="timeline-text">
-                2. Devised Unreal Engine 4 through C++ for optimal visual impact.
+                2. Collaborated with cross-functional teams to implement a RESTful web application, leveraging Tencent Cloud for robust and
+                scalable hosting. The application, designed for sending test data to devices, featured a React and TypeScript front-end, a C++
+                back-end and MySQL database, ensuring efficient data handling and a seamless user experience.
               </p>
               <p class="timeline-text">
-                3. Built and refactored the UI System, integrating user-friendly UI elements that enable developers to easily create
-                new UI using C++ and Lua.
-              </p>
-              <p class="timeline-text">
-                4. Developed the highly renowned mobile game: NARUTO, which have over 1 billion downloads using Unity
-                Engine and C#.
-              </p>
-              <p class="timeline-text">
-                5. Developed the highly renowned mobile game: NARUTO, which have over 1 billion downloads using Unity
-                Engine and C#.
+                3. Pioneered the creation of the hit mobile game "NARUTO" on Android and IOS, which achieved over 1 billion downloads,
+                developed with Unity Engine and C#, establishing a new industry benchmark.
               </p>
 
             </li>
@@ -392,11 +385,13 @@
               <span>2020-2021</span>
 
               <p class="timeline-text">
-                1. Worked as an intern in the One Piece Project Team. Obtained the qualification for a regular worker.
+                1. Elevated from intern to key team member on the One Piece Project, significantly contributing to its success and demonstrating adept
+                skills in UML for effective system design and project documentation.
               </p>
 
               <p class="timeline-text">
-                2. Participated in the Minigame competition and won a gold medal.
+                2. Received a gold medal in the Minigame competition, demonstrating excellence in an adept application of the Agile software
+                development lifecycle for high-quality product delivery.
               </p>
 
             </li>
