--- a/index.html
+++ b/index.html
@@ -335,16 +335,17 @@
               <span>2022 - 2023</span>
 
               <p class="timeline-text">
-                1. Developed a C++ server to facilitate frame synchronization in client-to-client combat scenarios, ensuring real-time, seamless
-                interaction between players.
+                1. Engineered a robust C++ server integrated with a MySQL database, optimizing frame synchronization in client-to-client combat
+                scenarios. This development ensured real-time, seamless interaction between players, significantly enhancing the user experience in
+                dynamic gaming environments.
               </p>
               <p class="timeline-text">
-                2. Spearheaded game performance optimization to ensure fluid gameplay across platforms including PS4, PS5, PC and Switch, catering to
-                a diverse user base. Implemented Docker for the development and deployment phases, automated deployment, and streamlined the
-                process using Jenkins for CI/CD.
+                2.	Spearheaded game performance optimization to ensure fluid user experience across platforms including PS4, PS5, PC and Switch,
+                catering to a diverse user base. Implemented Docker for the development and deployment phases, automated deployment, and
+                streamlined the process using Jenkins for CI/CD.
               </p>
               <p class="timeline-text">
-                3. Enhanced Unreal Engine 4 utilizing C++, achieving a 15% enhancement in game performance and setting benchmarks in efficiency.
+                3. Enhanced Unreal Engine utilizing C++, achieving a 15% enhancement in game performance and setting benchmarks in efficiency.
               </p>
               <p class="timeline-text">
                 4. Collaborated with artists in the rendering, level sequence, and character production process.
@@ -376,7 +377,6 @@
 
             </li>
 
-
             <li class="timeline-item">
 
               <h4 class="h4 timeline-item-title">Software Development Engineer Intern</h4>
@@ -394,6 +394,9 @@
                 development lifecycle for high-quality product delivery.
               </p>
 
+              <p class="timeline-text">
+                3. Led the seamless incorporation of AWS Lambda into our game project workflows for enhanced efficiency and scalability.
+              </p>
             </li>
 
           </ol>
